[gd_scene load_steps=6 format=3 uid="uid://5hsui8nt0nfd"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_6ttcw"]
[ext_resource type="Theme" uid="uid://b8sdnbj714bn3" path="res://Themes/menu_theme.tres" id="1_ytw0q"]
[ext_resource type="FontFile" uid="uid://dxgro1ckyu2r8" path="res://fonts/quadratum-unum-font/QuadratumUnum-LW0Z.ttf" id="3_fsxhm"]

[sub_resource type="LabelSettings" id="LabelSettings_r8ico"]
font = ExtResource("3_fsxhm")
font_size = 72
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fivyj"]
font = ExtResource("3_fsxhm")
font_size = 55
font_color = Color(0.886275, 0.101961, 0.137255, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ytw0q")
script = ExtResource("1_6ttcw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ytw0q")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -78.0
offset_right = 36.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ytw0q")

[node name="NewGameButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
tooltip_text = "Start a new game"
theme = ExtResource("1_ytw0q")
text = "NEW GAME"

[node name="SaveGameButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
tooltip_text = "Start a new game"
theme = ExtResource("1_ytw0q")
disabled = true
text = "SAVE GAME"

[node name="LoadGameButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
tooltip_text = "Start a new game"
theme = ExtResource("1_ytw0q")
text = "LOAD GAME"

[node name="OptionsButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
tooltip_text = "Start a new game"
theme = ExtResource("1_ytw0q")
text = "OPTIONS"

[node name="QuitGameButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
tooltip_text = "Start a new game"
theme = ExtResource("1_ytw0q")
text = "QUIT GAME"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_top = 12.0
offset_right = 142.0
offset_bottom = 79.0
grow_horizontal = 2
text = "Non-League 2 Legend"
label_settings = SubResource("LabelSettings_r8ico")

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_top = 12.0
offset_right = 142.0
offset_bottom = 79.0
grow_horizontal = 2
text = "Non-League 2 Legend"
label_settings = SubResource("LabelSettings_r8ico")

[node name="URL" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -120.0
offset_right = 164.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
text = "https://ko2fan.itch.io"
label_settings = SubResource("LabelSettings_fivyj")

[connection signal="pressed" from="Panel/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SaveGameButton" to="." method="_on_save_game_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
